// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories generator should generate folder path 1`] = `
"import { AppModule } from '../../../app.module';
import { NestedComponent } from './nested.component';
import { importProvidersFrom } from '@angular/core';
import { NoopAnimationsModule } from '@angular/platform-browser/animations';
import { Meta, applicationConfig, moduleMetadata } from '@storybook/angular';

export default {
  id: 'nestedcomponent-nested',
  title: 'Components/To/Nested',
  component: NestedComponent,
  decorators: [
    moduleMetadata({
      imports: [AppModule],
    }),
    // Define application-wide providers with the applicationConfig decorator
    applicationConfig({
      providers: [importProvidersFrom(NoopAnimationsModule)],
    }),
  ],
} as Meta<NestedComponent>;
export const Nested = {
  render: (args: NestedComponent) => ({
    props: args,
  }),
  args: {},
};
"
`;

exports[`stories generator should generate folder path 2`] = `
"import { E2eVariations } from '@skyux-sdk/e2e-schematics';

describe('test', () => {
  E2eVariations.forEachTheme((theme) => {
    describe(\`in \${theme} theme\`, () => {
      beforeEach(() =>
        cy.visit(
          \`/iframe.html?globals=theme:\${theme}&id=nestedcomponent-nested--nested\`
        )
      );
      it('should render the component', () => {
        cy.get('proj-nested')
          .should('exist')
          .should('be.visible')
          .screenshot(\`nestedcomponent-nested--nested-\${theme}\`)
          .percySnapshot(\`nestedcomponent-nested--nested-\${theme}\`, {
            widths: E2eVariations.DISPLAY_WIDTHS,
          });
      });
    });
  });
});
"
`;

exports[`stories generator should run successfully 1`] = `
"import { AppModule } from './app.module';
import { NxWelcomeComponent } from './nx-welcome.component';
import { importProvidersFrom } from '@angular/core';
import { NoopAnimationsModule } from '@angular/platform-browser/animations';
import { Meta, applicationConfig, moduleMetadata } from '@storybook/angular';

export default {
  id: 'nxwelcomecomponent-nxwelcome',
  title: 'Components/Nx Welcome',
  component: NxWelcomeComponent,
  decorators: [
    moduleMetadata({
      imports: [AppModule],
    }),
    // Define application-wide providers with the applicationConfig decorator
    applicationConfig({
      providers: [importProvidersFrom(NoopAnimationsModule)],
    }),
  ],
} as Meta<NxWelcomeComponent>;
export const NxWelcome = {
  render: (args: NxWelcomeComponent) => ({
    props: args,
  }),
  args: {},
};
"
`;

exports[`stories generator should use -storybook project 1`] = `
"import { AppModule } from './app.module';
import { NxWelcomeComponent } from './nx-welcome.component';
import { importProvidersFrom } from '@angular/core';
import { NoopAnimationsModule } from '@angular/platform-browser/animations';
import { Meta, applicationConfig, moduleMetadata } from '@storybook/angular';

export default {
  id: 'nxwelcomecomponent-nxwelcome',
  title: 'Components/Nx Welcome',
  component: NxWelcomeComponent,
  decorators: [
    moduleMetadata({
      imports: [AppModule],
    }),
    // Define application-wide providers with the applicationConfig decorator
    applicationConfig({
      providers: [importProvidersFrom(NoopAnimationsModule)],
    }),
  ],
} as Meta<NxWelcomeComponent>;
export const NxWelcome = {
  render: (args: NxWelcomeComponent) => ({
    props: args,
  }),
  args: {},
};
"
`;

exports[`stories generator should use -storybook project 2`] = `
"import { E2eVariations } from '@skyux-sdk/e2e-schematics';

describe('test-storybook', () => {
  E2eVariations.forEachTheme((theme) => {
    describe(\`in \${theme} theme\`, () => {
      beforeEach(() =>
        cy.visit(
          \`/iframe.html?globals=theme:\${theme}&id=nxwelcomecomponent-nxwelcome--nx-welcome\`
        )
      );
      it('should render the component', () => {
        cy.get('proj-nx-welcome')
          .should('exist')
          .should('be.visible')
          .screenshot(\`nxwelcomecomponent-nxwelcome--nx-welcome-\${theme}\`)
          .percySnapshot(\`nxwelcomecomponent-nxwelcome--nx-welcome-\${theme}\`, {
            widths: E2eVariations.DISPLAY_WIDTHS,
          });
      });
    });
  });
});
"
`;
